# vpnator

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  package-lock.json  package.json  tsconfig.eslint.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
docs/: contract.md
prisma/: schema.prisma  seed.ts
prisma/migrations/: migration_lock.toml
scripts/: export.ts  import.ts
src/: app.ts  server.ts
src/db/: prisma.ts
src/lib/: auth.ts  crypto.ts  env.ts  errors.ts  logger.ts  validation.ts  version.ts
src/modules/: index.ts
test/: admin-export.e2e.test.ts  audit.e2e.test.ts  auth.ts  crypto.unit.test.ts  e2e-dry-run-flow.e2e.test.ts  fakePrisma.ts  health.e2e.test.ts  install.service.test.ts  jobs.e2e.test.ts  jobs.ts  log-sanitizer.unit.test.ts  provision.service.test.ts  repair.service.test.ts  security-auth.e2e.test.ts  server-disguise.e2e.test.ts  server-install.e2e.test.ts  server-observability.e2e.test.ts  server-repair.e2e.test.ts  servers-users.e2e.test.ts  share.e2e.test.ts  user-config.e2e.test.ts  xray-client-store.integration.test.ts  xray-grpc-store.service.test.ts  xray-template.unit.test.ts
xray-client-agent/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.eslint.json  tsconfig.json  vitest.config.ts
xray-client-agent/src/: appPaths.ts  cli.ts  errors.ts  index.ts  (+3 more)
xray-desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
xray-desktop/src-tauri/: Cargo.toml  tauri.conf.json
xray-desktop/src-tauri/src/: main.rs
(+80 files in other folders)
