[package]
name = "xray-desktop"
version = "0.1.0"
description = "Tauri shell for xray-client-agent"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-deep-link = "2.4.3"
